featr/home-heero

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,20 @@
 /* You can add global styles to this file, and also import other style files */
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+/* Importing Bootstrap SCSS file. */
+/* Importing Bootstrap SCSS file. */
+
+@import url("./assets/fonts/_fonts.css");
+
+.container {
+    padding: 0px;
+    
+}
+
+
+
+// X-Large devices (large desktops, 1200px and up)
+@media (min-width: 1870px) {
+    .container {
+        padding: 0px 100px;
+    }
+ }
+
