--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,25 +1,23 @@
 <section class="hero">
-    <div class="container header flex-column justify-content-center align-items-center">
-        <app-navbar class="d-flex"></app-navbar>
+  <div class="container header flex-column justify-content-center align-items-center">
+    <app-navbar class="d-flex"></app-navbar>
+  </div>
+
+
+  <div class="container search flex-column justify-content-center align-items-center">
+    <label class="search__title neon__text2">what are you looking for?</label>
+
+    <div class="row w-100 d-flex justify-content-center align-items-center">
+
+      <div class="col-md-8">
+        <div class="search">
+          <i class="fa fa-search"></i>
+          <input type="text" class="form-control" placeholder="What are you loking for?">
+          <i class="search-icon"></i>
+        </div>
+      </div>
+
     </div>
 
-
-    <div class="container search flex-column justify-content-center align-items-center">
-        <div class="row w-100 d-flex justify-content-center align-items-center">
-
-            <div class="col-md-8">
-
-              <div class="search">
-                <i class="fa fa-search"></i>
-                <input type="text" class="form-control" placeholder="Have a question? Ask Now">
-                <button class="btn">
-                    <i class="search-icon"></i>
-                </button>
-              </div>
-              
-            </div>
-            
-          </div>
-        
-    </div>
+  </div>
 </section>
