--- a/src/app/commons/components/navbar/navbar.component.scss
+++ b/src/app/commons/components/navbar/navbar.component.scss
@@ -3,9 +3,8 @@
     color: black;
     border-bottom-right-radius: 30px;
     border-bottom-left-radius: 30px;
-    padding: 1em 5em;
     border-bottom-style: solid;
-    box-shadow: 0px 0px 20px 9px;
+    box-shadow: 0px 0px 20px 0px;
     max-width: 50em;
 }
 
@@ -17,6 +16,9 @@
     color: black;
 }
 
+.nav-link {
+    color: black;
+}
 
 .dropdown-menu {
     background: #FCA526;
