--- a/src/assets/fonts/_fonts.css
+++ b/src/assets/fonts/_fonts.css
@@ -7,3 +7,9 @@
     font-family: "Plane Cash";
     src: url(/assets/fonts/plane_crash/PlaneCrash.ttf);
   }
+
+  @font-face {
+    font-family: "Mom Typewriter";
+    src: url(/assets/fonts/moms_typewriter/Momt___.ttf);
+  }
+  
