--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,11 @@
+
+@if (loader.isloading$ | async) {
+  <app-screen-loader></app-screen-loader>
+}
+
+
 <div class="main">
-  <router-outlet></router-outlet>
+  <router-outlet>
+  </router-outlet>
 </div>
+ 
