--- a/src/styles.scss
+++ b/src/styles.scss
@@ -10,11 +10,57 @@
 }
 
 
-
 // X-Large devices (large desktops, 1200px and up)
 @media (min-width: 1870px) {
     .container {
         padding: 0px 100px;
     }
  }
+
+.relative {
+    position: relative !important;
+}
+
+.fixed {
+    position: fixed !important;
+}
+
+.index-1{
+    z-index: 1;
+}
+
+
+.circule {
+    border-radius: 50%;
+}
+
+.color-white {
+    color: white;
+}
+
+.bg-yellow-dark {
+    background-color: #f4cd25;
+}
+
+.bg-sky-ligth {
+    background-color: #bff9fd;
+}
+
+.bg-green-1 {
+    background-color: #fb83a7;
+}
+
+
+.bg-black {
+    background-color: black;
+}
+
+.bg-orange-1 {
+    background-color: #f78b37;
+}
+
+.bg-blue {
+    background-color: blue;
+}
+
 
