--- a/src/app/commons/components/screen-loader/screen-loader.component.html
+++ b/src/app/commons/components/screen-loader/screen-loader.component.html
@@ -1,4 +1,6 @@
 <div class="container-loader">
-    <h3 class="container-loader__title">LOADING...</h3>
+    <div class="d-flex flex-row">
+        <h3 class="container-loader__title">LOADING</h3>
+    </div>
     <div class="loader"></div>
 </div>
