--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,6 +1,6 @@
 <section>
   <!---NAVBAR SECTION-->
-  <div class="container header flex-column justify-content-center align-items-center relative index-1">
+  <div class="container header flex-column justify-content-center align-items-center relative">
     <app-navbar class="d-flex justify-content-center w-100"></app-navbar>
   </div>
 
