--- a/src/app/commons/components/course-preview/course-preview.component.scss
+++ b/src/app/commons/components/course-preview/course-preview.component.scss
@@ -1,5 +1,7 @@
+@import "./../../../../assets/_variables";
+
 .card-title {
-    font-family: "Retro Team";
+    font-family: $font_hight_retro;
     letter-spacing: 2px;
     font-size: 1.2rem;
     padding-top: 0.5rem;
@@ -9,7 +11,7 @@
 }
 
 .list-inline-item {
-    font-family: "Retro Team";
+    font-family: $font_hight_retro;
     font-size: 1rem;
     letter-spacing: 3px;
 }
