--- a/src/app/commons/components/navbar/navbar.component.scss
+++ b/src/app/commons/components/navbar/navbar.component.scss
@@ -1,5 +1,7 @@
+@import "./../../../../assets/_variables";
+
 .navbar {
-    background-color: #4aa1ad;
+    background-color: $color_navbar;
     color: black;
     border-bottom-right-radius: 30px;
     border-bottom-left-radius: 30px;
@@ -9,7 +11,7 @@
 }
 
 .navbar {
-    font-family: "Plane Cash";
+    font-family: $font_navbar;
  }
 
 .navbar-brand {
@@ -20,12 +22,13 @@
 .nav-item {
     font-size: 0.8rem;
 }
+
 .nav-link {
     color: black;
 }
 
 .dropdown-menu {
-    background: #FCA526;
+    background: $color_navbar_option;
     border-style: ridge;
     border-width: 2px;
     border-radius: 27px;
@@ -39,7 +42,7 @@
 }
 
 .dropdown-item:hover {
-    background-color: #de9322;
+    background-color: $color_navbar_option_hover;
 }
 
 .dropdown-menu > li:first-child:hover a {
