--- a/src/app/pages/home/commons/components/articles/articles.component.html
+++ b/src/app/pages/home/commons/components/articles/articles.component.html
@@ -1,9 +1,9 @@
 <div class="container mt-5 d-flex flex-column subjects__section">
     <h2  class="color-white subjects__section__title d-flex flex-column align-items-center mb-4">
-      ARTICLES
+      POPULAR ARTICLES
       <span class="underline"></span>
     </h2>
-    <div class="w-100 d-flex row">
+    <div class="w-100 d-flex row ms-0">
       @for (item of courses; track $index) {
         <div class="col-sm-6 col-md-4 col-lg-3 mb-4">
           <app-course-preview [course]="item"></app-course-preview>
@@ -12,3 +12,4 @@
    
     </div>
   </div>
+   
