--- a/src/styles.scss
+++ b/src/styles.scss
@@ -3,6 +3,7 @@
 /* Importing Bootstrap SCSS file. */
 
 @import url("./assets/fonts/_fonts.css");
+@import url("./assets/__indexes.scss");
 
 .container {
     padding: 0px;
@@ -25,9 +26,6 @@
     position: fixed !important;
 }
 
-.index-1{
-    z-index: 1;
-}
 
 
 .circule {
@@ -51,10 +49,6 @@
 }
 
 
-.bg-black {
-    background-color: black;
-}
-
 .bg-orange-1 {
     background-color: #f78b37;
 }
@@ -64,3 +58,6 @@
 }
 
 
+.copyright {
+    height: 4vh;
+}
