--- a/src/app/pages/article/commons/components/avatar-writer/avatar-writer.component.html
+++ b/src/app/pages/article/commons/components/avatar-writer/avatar-writer.component.html
@@ -1,23 +1,23 @@
 <div class="text-lg-left d-flex flex-lg-row flex-column justify-content-lg-between">
     <div class="d-flex">
         <!-- Author info -->
-        <div class="position-relative">
+        <div class="position-relative d-flex align-items-center">
             <!-- Avatar -->
             <div class="avatar avatar-xxl">
-                <img class="avatar-img rounded-circle" src="https://eduport.webestica.com/assets/images/avatar/09.jpg"
+                <img class="avatar-img rounded-circle" src="https://avatars.githubusercontent.com/u/12477590?v=4"
                     alt="avatar">
             </div>
         </div>
         <!-- Info -->
         <div class="d-flex flex-column ms-3">
-            <a href="#" class="h5 mt-2 mb-0 d-block avatar__user-name">Frances Guerrero</a>
+            <a href="#" class="h5 mt-2 mb-0 d-block avatar__user-name">Joset Manihuari Yaricahua</a>
             <ul class="list-inline list-unstyled d-flex flex-row m-0">
                 <li class="list-inline-item d-lg-block">Nov 15, 2021 |</li>
                 <li class="list-inline-item d-lg-block">5 min read</li>
             </ul>
         </div>
     </div>
-    <aside class="d-flex">
+    <aside class="d-flex align-items-end">
         <div class="d-flex flex-column">
             <ul class="list-inline list-unstyled d-flex flex-row m-0">
                 <li class="list-inline-item d-lg-block">My networks:</li>
