--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -6,7 +6,7 @@
 
   <!---HERO-->
   <app-hero></app-hero>
-  <app-articles></app-articles>
+  <app-popular-articles></app-popular-articles>
 </section>
 <section class="copyright bg-black">
   <app-copy-rights class="w-100"></app-copy-rights>
