--- a/src/app/commons/components/course-preview/course-preview.component.html
+++ b/src/app/commons/components/course-preview/course-preview.component.html
@@ -1,47 +1,22 @@
-<div class="card">
-    <figure>
+<article class="card" [ngClass]="size">
+    <figure class="card__preview mb-2 me-lg-4">
         <a class="px-0" routerLink="/article/nuevo-curso-de-programacion-avanzado-233">
-            <img [src]="course.imagePreview"
-            class="card-img-top" alt="Java script">
+            <img [src]="course.imagePreview" class="card-img-top" alt="Java script">
         </a>
     </figure>
-    <h5 class="card-title mt-1">{{course.title}}</h5>
-    <div class="card-body mt-1">
-        <ul class="mb-3 list-inline d-flex flex-column">
-            <li class="list-inline-item">
-                <span class="fs-6 text-muted">{{ 'Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi consequuntur suscipit, officia ut culpa provident reprehenderit mollitia harum minima veritatis officiis sit dolor tempore voluptate nobis corporis ipsam animi fugit.' | slice: 0 : 100 }}...</span>
-            </li>
-            <li class="list-inline-item mt-1">
-                <span class="text-warning me-1 mb-1"> <svg viewBox="0 0 24 24"
-                        role="presentation" style="width: 0.875rem; height: 0.875rem;">
-                        <path
-                            d="M12,17.27L18.18,21L16.54,13.97L22,9.24L14.81,8.62L12,2L9.19,8.62L2,9.24L7.45,13.97L5.82,21L12,17.27Z"
-                            style="fill: currentcolor;"></path>
-                    </svg><svg viewBox="0 0 24 24" role="presentation"
-                        style="width: 0.875rem; height: 0.875rem;">
-                        <path
-                            d="M12,17.27L18.18,21L16.54,13.97L22,9.24L14.81,8.62L12,2L9.19,8.62L2,9.24L7.45,13.97L5.82,21L12,17.27Z"
-                            style="fill: currentcolor;"></path>
-                    </svg><svg viewBox="0 0 24 24" role="presentation"
-                        style="width: 0.875rem; height: 0.875rem;">
-                        <path
-                            d="M12,15.4V6.1L13.71,10.13L18.09,10.5L14.77,13.39L15.76,17.67M22,9.24L14.81,8.63L12,2L9.19,8.63L2,9.24L7.45,13.97L5.82,21L12,17.27L18.18,21L16.54,13.97L22,9.24Z"
-                            style="fill: currentcolor;"></path>
-                    </svg><svg viewBox="0 0 24 24" role="presentation"
-                        style="width: 0.875rem; height: 0.875rem;">
-                        <path
-                            d="M12,15.39L8.24,17.66L9.23,13.38L5.91,10.5L10.29,10.13L12,6.09L13.71,10.13L18.09,10.5L14.77,13.38L15.76,17.66M22,9.24L14.81,8.63L12,2L9.19,8.63L2,9.24L7.45,13.97L5.82,21L12,17.27L18.18,21L16.54,13.97L22,9.24Z"
-                            style="fill: currentcolor;"></path>
-                    </svg><svg viewBox="0 0 24 24" role="presentation"
-                        style="width: 0.875rem; height: 0.875rem;">
-                        <path
-                            d="M12,15.39L8.24,17.66L9.23,13.38L5.91,10.5L10.29,10.13L12,6.09L13.71,10.13L18.09,10.5L14.77,13.38L15.76,17.66M22,9.24L14.81,8.63L12,2L9.19,8.63L2,9.24L7.45,13.97L5.82,21L12,17.27L18.18,21L16.54,13.97L22,9.24Z"
-                            style="fill: currentcolor;"></path>
-                    </svg></span>
-                <span class="text-warning me-1"> 2.5</span>
-                <span class="fs-6 text-muted"> (1,500)</span>
-            </li>
-
-        </ul>
+    <div class="card__content">
+        <h5 class="card-title mt-1">{{course.title}}</h5>
+        <div class="card-body mt-1">
+            <ul class="mb-3 list-inline d-flex flex-column">
+                <li class="list-inline-item">
+                    <span class="fs-6 text-muted">{{getDescription(course.description)}}</span>
+                </li>
+            </ul>
+        </div>
+        @if (size === 'large') {
+            <app-avatar-writer></app-avatar-writer>
+        }
+        
+        
     </div>
-</div>
+</article>
