--- a/src/app/commons/components/navbar/navbar.component.html
+++ b/src/app/commons/components/navbar/navbar.component.html
@@ -15,7 +15,7 @@
             <a class="nav-link active" aria-current="page" href="#">home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">articles</a>
+            <a class="nav-link" routerLink="/articles">articles</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">demos</a>
