--- a/src/app/pages/home/commons/components/hero/hero.component.html
+++ b/src/app/pages/home/commons/components/hero/hero.component.html
@@ -1,9 +1,9 @@
 <div class="search flex-column justify-content-center align-items-center hero d-flex">
     <h3 class="search__title neon__text2">what are you looking for?</h3>
     <div class="row w-100 d-flex justify-content-center align-items-center">
-      <div class="col-md-5">
+      <div class="col-12 col-md-7 col-xl-4">
         <div class="">
-          <app-search></app-search>
+          <app-search styled="ligth"></app-search>
         </div>
       </div>
     </div>
