--- a/src/app/pages/home/commons/components/popular-articles/popular-articles.component.html
+++ b/src/app/pages/home/commons/components/popular-articles/popular-articles.component.html
@@ -1,11 +1,11 @@
 <div class="container mt-5 d-flex flex-column subjects__section">
-    <h2  class="color-white subjects__section__title d-flex flex-column align-items-center mb-4">
+    <h2  class="subjects__section__title d-flex flex-column align-items-center mb-4">
       POPULAR ARTICLES
       <span class="underline"></span>
     </h2>
     <div class="w-100 d-flex row ms-0">
       @for (item of courses; track $index) {
-        <div class="col-sm-6 col-md-4 col-lg-4 mb-4">
+        <div class="col-sm-6 col-md-6 col-lg-4 mb-4">
           <app-course-preview [course]="item"></app-course-preview>
         </div>
       }
