--- a/src/styles.scss
+++ b/src/styles.scss
@@ -6,6 +6,7 @@
 @import "./assets/__indexes.scss";
 @import "./assets/_variables";
 
+
 .container {
     padding: 0px;
     
@@ -66,12 +67,16 @@
 }
 
 
-@media (min-width: 1400px) {
-    .container, .container-lg, .container-md, .container-sm, .container-xl, .container-xxl {
-        max-width: 1200px;
-    }
-}
+// @media (min-width: 1400px) {
+//     .container, .container-lg, .container-md, .container-sm, .container-xl, .container-xxl {
+//         max-width: 1200px;
+//     }
+// }
 
 .cursor-pointer {
     cursor: pointer;
+}
+
+section {
+    background-color: $color_hero;
 }
