articles search page

--- a/src/app/commons/components/navbar/navbar.component.html
+++ b/src/app/commons/components/navbar/navbar.component.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg w-md-100">
     <div class="container-fluid">
-      <a class="navbar-brand" href="#">dogger</a>
+      <a class="navbar-brand" routerLink="/">dogger</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <i class="bi bi-menu-button-wide">
           <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-menu-button-wide" viewBox="0 0 16 16">
@@ -12,13 +12,13 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#">home</a>
+            <a class="nav-link active" aria-current="page" routerLink="/">home</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" routerLink="/articles">articles</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">demos</a>
+            <a class="nav-link" href="#">courses</a>
           </li>
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
