--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -8,6 +8,6 @@
   <app-hero></app-hero>
   <app-popular-articles></app-popular-articles>
 </section>
-<section class="copyright bg-black">
+<section class="copyright">
   <app-copy-rights class="w-100"></app-copy-rights>
 </section>
