--- a/src/assets/fonts/_fonts.scss
+++ b/src/assets/fonts/_fonts.scss
@@ -103,6 +103,7 @@ $font_typewriter_thin: "JMH Typewriter Thin";
 }
 
 .font-hight-retro_1 {
+  text-transform: lowercase;
   font-family: $font_navbar;
 }
 
