--- a/src/app/commons/components/search/search.component.html
+++ b/src/app/commons/components/search/search.component.html
@@ -1,6 +1,13 @@
 <div class="search" [className]="'search ' + styled">
-    <input type="text" class="form-control" [placeholder]="placeHolder">
-    <button class="circule search__icon">
+    <input  type="text"
+            #inputSearch
+            class="form-control"
+            (change)="onChangedValue(inputSearch.value)"
+            (focus)="onTouched()"
+            [disabled]="disabled"
+            [value]="value"
+            [placeholder]="placeHolder">
+    <button (click)="onSearchEvent()" [disabled]="disabled" class="circule search__icon">
         <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-search" viewBox="0 0 16 16">
             <path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001q.044.06.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1 1 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0"/>
           </svg>
