--- a/src/app/commons/components/search/search.component.scss
+++ b/src/app/commons/components/search/search.component.scss
@@ -5,7 +5,7 @@
     border-radius: 27px;
     background-color: white;
     border-color: $color_search_placeholder;
-    font-family: $font_small_retro;
+    font-family: $font_typewriter;
     font-size: 18px;
     height: 55px;
     display: flex;
