--- a/src/app/pages/articles/articles.component.scss
+++ b/src/app/pages/articles/articles.component.scss
@@ -7,8 +7,6 @@
 }
 
 
-
-
 @media screen and (max-width:991px) {
     .breakmark {
         display: none;
@@ -16,19 +14,21 @@
 }
 
 .articles-header {
-    padding-top: 3.5rem;
-    padding-bottom: 2.8rem;
-    background: url("/assets/images/articles/04.png") no-repeat center center;
-    background-size:cover;
+    background-image: radial-gradient(circle, rgba(0, 0, 0, 0.56) 5%, rgb(0 0 0 / 55%) 100%), url(/assets/images/hero.webp);
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    height: 30vh;
     background-color: $color_hero;
-
+    margin-top: -3.5rem;
     &__title {
         color: $color_primary;
         font-family: $font_hight_retro;
-        
+        font-size: 2.2rem;
     }
 
     &__result-count {
         font-size: 1.8rem;
     }
 }
+
