--- a/src/app/pages/home/commons/components/hero/hero.component.html
+++ b/src/app/pages/home/commons/components/hero/hero.component.html
@@ -3,7 +3,7 @@
     <div class="row w-100 d-flex justify-content-center align-items-center">
       <div class="col-12 col-md-7 col-xl-4">
         <div class="">
-          <app-search styled="ligth"></app-search>
+          <app-search (onSearch)="onSearch($event)" styled="ligth"></app-search>
         </div>
       </div>
     </div>
