--- a/src/app/commons/components/search/search.component.html
+++ b/src/app/commons/components/search/search.component.html
@@ -6,6 +6,7 @@
             (focus)="onTouched()"
             [disabled]="disabled"
             [value]="value"
+            (keydown.enter)="onSearchEvent()"
             [placeholder]="placeHolder">
     <button (click)="onSearchEvent()" [disabled]="disabled" class="circule search__icon">
         <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-search" viewBox="0 0 16 16">
